fix flash card size on small screens

--- a/client/src/css/FlashCardList.css
+++ b/client/src/css/FlashCardList.css
@@ -49,3 +49,9 @@ input[type="checkbox"].flash-card-input:checked
 	div.flash-card {
 	border-color: #dc3546bd;
 }
+
+@media only screen and (max-width: 385px) {
+	.scene {
+		width: 270px;
+	}
+}
